classDiagram
    direction TB

    class User {
        +Integer id
        +String email
        +String passwordHash
        +String name
        +String role
        +String avatarUrl
        +Boolean isBlocked
        +Boolean emailVerified
        +authenticate()
        +register()
        +update()
        +change_password()
        +has_role()
        +block()
    }

    class Reserve {
        +Integer id
        +String name
        +String type
        +String region
        +String district
        +Real latitude
        +Real longitude
        +Real area
        +String description
        +Boolean isPublished
        +String phone
        +String email
        +String website
        +get_by_id()
        +get_all()
        +get_filters()
        +create()
        +update()
        +delete()
    }

    class Photo {
        +Integer id
        +Integer reserveId
        +String url
        +get_by_reserve()
        +add()
        +delete()
    }

    class Favorite {
        +Integer id
        +Integer userId
        +Integer reserveId
        +get_by_user()
        +add()
        +remove()
    }

    class Review {
        +Integer id
        +Integer reserveId
        +Integer userId
        +Integer rating
        +String comment
        +String status
        +DateTime createdAt
        +DateTime updatedAt
        +get_by_reserve()
        +get_by_user()
        +create()
        +update()
        +delete()
        +moderate()
    }

    class CuratedRoute {
        +Integer id
        +String slug
        +String title
        +String reserveIds
        +String profile
        +Integer distanceM
        +Integer durationS
        +Boolean isPublished
        +get_all()
        +get_by_slug()
        +create()
        +update()
        +delete()
    }

    class UserSavedRoute {
        +Integer id
        +Integer userId
        +Integer reserveId
        +String profile
        +String title
        +String geojson
        +Real distanceM
        +Real durationS
        +DateTime createdAt
        +get_by_user()
        +get_by_id()
        +create()
        +delete()
    }

    class AuditLog {
        +Integer id
        +Integer userId
        +String actionType
        +String entityType
        +Integer entityId
        +DateTime createdAt
        +log_action()
        +get_all()
    }

    class RoutingService {
        +build_route()
    }

    Reserve "1" *-- "0..*" Photo
    User "1" -- "0..*" Favorite
    Reserve "1" -- "0..*" Favorite
    User "1" -- "0..*" Review
    Reserve "1" -- "0..*" Review
    User "1" -- "0..*" UserSavedRoute
    Reserve "1" -- "0..*" UserSavedRoute
    User "1" -- "0..*" AuditLog
    Reserve ..> RoutingService
